# MyChatServer

./: CMakeLists.txt  README.md  build.sh
include/: public.hpp
include/server/: chat_server.hpp  chat_service.hpp
include/server/model/: friend_model.hpp  group.hpp  group_model.hpp  group_user.hpp  offlinemsgmodel.hpp  user.hpp  usermodel.hpp
include/server/mysql/: db.h
include/server/redis/: redis.hpp
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  chat_server.cpp  chat_service.cpp  main.cpp
src/server/model/: friend_model.cpp  group_model.cpp  offlinemsgmodel.cpp  usermodel.cpp
src/server/mysql/: db.cpp
src/server/redis/: redis.cpp
testmuduo/: CMakeLists.txt  muduo_server.cpp
